# simWAMpileup

./: CMakeLists.txt  README.md  simWAMpileup.cc
example/: bgd0_54ch.pha  exmpleLog  model_bb40keV.fake  side0_theta59.92_phi51.36_090122120002_fine.rsp
include/: powCalc.hh  readRespWAM.hh  readSpecWAM.hh  readText.hh  simPileup.hh
src/: powCalc.cc  readRespWAM.cc  readSpecWAM.cc  readText.cc  simPileup.cc
